# MultiMM

./: .gitignore  .python-version  MultiEM.py  MultiEM_MDS.py  MultiEM_args.py  MultiEM_ens.py  MultiEM_init_tools.py  MultiEM_metrics.py  MultiEM_nuc_interpol.py  MultiEM_plots.py  MultiEM_utils.py  README.md  args_definition.py  biosym.yml  config.ini  config_auto.ini  ellipsoid_measure.py  format_and_lint.sh  initial_structure_tools.py  nucleosome_interpolation.py  nucs_helixes_banecki.py  nucs_init_struct_tools.py  nucs_preprocessing.py  plots.py  pyproject.toml  requirements.txt  run.py  run_regions.py  setup.py  utils.py  validation.py
.github/workflows/: python-publish.yml
MultiMM/: args_definition.py  initial_structure_tools.py  utils.py  validation.py
examples/: config_gw.ini  config_single_cell.ini  config_specific_region.ini  readme.md
nucs_test/: MultiEM_chromosome_colors.cmd  chrom_lengths.npy  compartments.npy  ds.npy
simulation/: Interactive - utils.py.ipynb  __init__.py  args_definition.py  initial_structure_tools.py  model.py  nucleosome_interpolation.py  plots.py  run.py  utils.py  validation.py
simulation/data/: hg38_gtf_annotations.tsv
src/multimm/: __init__.py  args_definition.py  bridge.py  config.ini  config.py  enums.py  initial_structure_tools.py  logger.py  model.py  nucleosome_interpolation.py  plots.py  run.py  utils.py  validation.py
src/multimm/data/: hg38_gtf_annotations.tsv
src/multimm/forcefields/: dna_histones_ff.xml  ff.xml
tests/: conftest.py  test_run_validation.py  test_simulations.py
tests/fixtures/: ENCFF045MJY_simple.bedpe
