[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MultiMM"
version = "2.0.2"
description = "A tool for chromatin modeling from nucleosomes to chromosomal territories."
readme = "README.md"
authors = [
    { name = "Sebastian Korsak", email = "s.korsak@datascience.edu.pl" }
]
license = { text = "GNU General Public License v3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.11",
    "pandas>=2.2.2",
    "argparse>=1.4.0",
    "matplotlib>=3.8.2",
    "mdtraj>=1.9.9",
    "seaborn>=0.12.2",
    "scikit-learn>=1.3.0",
    "configparser>=6.0.1",
    "typing-extensions>=4.7.1",
    "pyBigWig>=0.3.22",
    "hilbertcurve>=2.0.5",
    "tqdm>=4.65.2",
    "pyvista[all]",
    "OpenMM>=8.5.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "isort",
    "docformatter",
    "pytest",
]

[project.scripts]
MultiMM = "multimm.run:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["multimm", "multimm.*"]

[tool.setuptools.package-data]
multimm = ["forcefields/*", "data/*"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py310"
